pending change to stop click actions spilling across lines
git-svn-id: http://divmod.org/svn/Divmod/trunk@2554 866e43f7-fbfc-0310-8f2a-ec88d1da2979

--- a/ClickChronicle/clickchronicle/static/css/clickchronicle.css
+++ b/ClickChronicle/clickchronicle/static/css/clickchronicle.css
@@ -20,6 +20,10 @@ form { margin-bottom: 4px; }
 #filterDialog { display: none }
 #filterDialog > form { margin-top: 4px; }
 
+.click-actions {
+    white-space: nowrap;
+}
+
 input.submit {
 	border: 3px double #999999;
 	border-top-color: #CCCCCC;
